@@ -30,6 +30,8 @@ Sky labels now default to user locale language if possible
 Added fader on nebula hints (hints can now draw even when atmosphere is on)
 Added fader on cardinal points
 Now display star distances
+Added Spanish translation by Sergio Trujillo
+Fixed deselect while zooming in crash bug
 	
 0.6.2 [2004-11-18]
 Fixed time display bug (1 hour ahead of actual sky time during standard time if your timezone has daylight savings).  
